- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    6.9
 
- 
        7bb14bc39 (dev), 3c86f4219 (6.9)
 - 
        DaVinci 112
 
Consider the following code:
#include <QObject> /*! * \class Foo * * Yo */ class Foo : public QObject { Q_OBJECT Q_SIGNALS: /*! * A signal */ void stuff(QPrivateSignal); /*! * Another signal */ void more(); };
The generated HTML shows only the 'more' signal, but not the 'stuff' signal.
The build log has
/home/nico/workspace/privatesignal/foo.h:13: (qdoc) warning: Cannot tie this documentation to anything [qdoc found a /*! ... */ comment, but there was no topic command (e.g., '\fn', '\page') in the comment and no function definition following the comment.]
Removing the QPrivateSignal arg makes the signal show up in the documentation.
qttools commit 942ddc8f17436014539342d2d33c9095dbb9900f